--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,7 @@
 [pytest]
-addopts = -s --html=./report/report.html --reruns 2
+addopts = -s --alluredir report --reruns 2
 testpaths = ./scripts
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
+
